    - The LOD SOP now supports all standard grid types, including
      boolean grids.
    - Made various small changes for Houdini 16 compatibility.
      [Contributed by SideFX]
    - The Create SOP now supports matching the new grids' transform,
      voxel size, and topology to a reference grid.  If the topology is
      being matched, it can optionally be resampled to a different voxel size.


Version 4.0.0 - November 15, 2016

    Highlights:
    - Incorporated Double Negative's OpenVDB Points library.
      See https://github.com/dneg/openvdb_points_dev for details.
    - Introduced some C++11 constructs.  A C++11-compatible compiler
      is now required.
    - Blosc-compressed .vdb files are now as much as 20% smaller.
    - Vector-valued grids are now constructed and destroyed much faster.

      This change and other changes in this release (see "ABI changes" below)
      alter the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones in Houdini 15.0 and 15.5.
      Define the macro OPENVDB_3_ABI_COMPATIBLE when compiling OpenVDB
      to disable these changes and preserve ABI compatibility.

    New features:
    - Added an option to the point scattering tools to specify how far
      each point may be displaced from the center of its host voxel or tile.
    - Added a toggle to tools::clip() to invert the clipping mask.
    - Custom leaf node implementations may now optimize their file layout
      by inheriting from io::MultiPass.  Voxel data for grids with such
      leaf nodes will be written and read in multiple passes, allowing
      blocks of related data to be stored contiguously.
      [Contributed by Double Negative]
    - Added Tree::unallocatedLeafCount(), which returns the number of leaf
      nodes with unallocated data buffers (typically due to delayed loading).

    Improvements:
    - Vector-valued grids are now constructed and destroyed much faster.